kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-app-service
  namespace: ivolve-namespace
spec:
  selector:
    app: java-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
      nodePort: 30081  # (Port should be between 30000-32767)
  type: NodePort
